@@ -1009,6 +1009,7 @@
 	"S_GENERAL"=>				"General",
 	"S_AUDIT"=>				"Audit",
 	"S_LOGIN"=>				"Login",
+	"S_LOGOUT"=>				"Logout",
 	"S_LATEST_DATA"=>			"Latest data",
 
 //	Errors
